public class Mandolin extends Instrument{

    public Mandolin() {
    }

}
